# dependencetest

./: .Rbuildignore  .Renviron  .Rinstignore  .gitignore  .renvignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  pyproject.toml
R/: dependencetest-package.r  dummy-fun.R
exec/: simulation_power.R  simulation_valsel.R  simulation_valsel_rho.R  simulation_varsel_nlm.R
exec/dummy/: dummy-hello.R
man/: RFNR.Rd  dmy_hello.Rd
renv/: settings.dcf  settings.json
vignettes/: dependencetest-demo.Rmd
